finished references for outlook

--- a/References/references.bib
+++ b/References/references.bib
@@ -3621,7 +3621,7 @@
   title  = {{MELLODDY: cross pharma federated learning at unprecedented scale unlocks benefits in QSAR without compromising proprietary information}},
   year   = {2022},
   month  = {10},
-  url    = {https://chemrxiv.org/engage/chemrxiv/article-details/6345c0f91f323d61d7567624},
+  url    = {\url{https://chemrxiv.org/engage/chemrxiv/article-details/6345c0f91f323d61d7567624}},
   doi    = {10.26434/chemrxiv-2022-ntd3r}
 }
 
@@ -3702,3 +3702,246 @@
   urlseen      = {17-03-23},
   year         = {2023}
 }
+
+@article{Blay20221DELTox,
+  author  = {Vincent Blay and Xiaoyu Li and Jacob Gerlach and Fabio Urbina and Sean Ekins},
+  journal = {Drug Discovery Today},
+  number  = {11},
+  pages   = {103351},
+  title   = {Combining DELs and machine learning for toxicology prediction},
+  volume  = {27},
+  year    = {2022}
+}
+
+@article{king2022probing,
+  title  = {Probing the Chemical" Reactome" with High Throughput Experimentation Data},
+  author = {King-Smith, Emma and Berritt, Simon and Bernier, Louise and Hou, Xinjun and Klug-McLeod, Jacquelyn and Mustakis, Jason and Sach, Neal and Tucker, Joseph and Yang, Qingyi and Howard, Roger and others},
+  year   = {2022},
+  month  = {10},
+  url    = {\url{https://chemrxiv.org/engage/chemrxiv/article-details/63581205aca1989b92e4d77c}},
+  doi    = {10.26434/chemrxiv-2022-hjnmr}
+}
+
+@article{xu2022roadmap,
+  title  = {Roadmap to Pharmaceutically Relevant Reactivity Models Leveraging High-Throughput Experimentation},
+  author = {Xu, Jessica and Kalyani, Dipannita and Struble, Thomas and Dreher, Spencer and Krska, Shane and Buchwald, Stephen L and Jensen, Klavs F},
+  year   = {2022},
+  month  = {9},
+  url    = {\url{https://chemrxiv.org/engage/chemrxiv/article-details/632250f8173b5de837fdbe00}},
+  doi    = {10.26434/chemrxiv-2022-x694w}
+}
+
+@article{Kearnes2021OpenReaction,
+  author  = {Kearnes, Steven M. and Maser, Michael R. and Wleklinski, Michael and Kast, Anton and Doyle, Abigail G. and Dreher, Spencer D. and Hawkins, Joel M. and Jensen, Klavs F. and Coley, Connor W.},
+  journal = {Journal of the American Chemical Society},
+  number  = {45},
+  pages   = {18820-18826},
+  title   = {The Open Reaction Database},
+  volume  = {143},
+  year    = {2021}
+}
+
+@article{Tu2023deployment,
+  author  = {Tu, Zhengkai and Stuyver, Thijs and Coley, Connor W.},
+  journal = {Chem. Sci.},
+  pages   = {226-244},
+  title   = {Predictive chemistry: machine learning for reaction deployment{,} reaction development{,} and reaction discovery},
+  volume  = {14},
+  year    = {2023}
+}
+
+@article{Ahneman2018PredictingCoupling,
+  author  = {Derek T. Ahneman and Jes{\'u}s G. Estrada and Shishi Lin and Spencer D. Dreher and Abigail G. Doyle},
+  journal = {Science},
+  number  = {6385},
+  pages   = {186-190},
+  title   = {Predicting reaction performance in C-N cross-coupling using machine learning},
+  volume  = {360},
+  year    = {2018}
+}
+
+@article{Thakkar2020DatasetsSynthesis,
+  author  = {Thakkar, Amol and Kogej, Thierry and Reymond, Jean-Louis and Engkvist, Ola and Bjerrum, Esben Jannik},
+  journal = {Chem. Sci.},
+  pages   = {154-168},
+  title   = {Datasets and their influence on the development of computer assisted synthesis planning tools in the pharmaceutical domain},
+  volume  = {11},
+  year    = {2020}
+}
+
+@article{Wiest2023DatasetYields,
+  author  = {Wiest, Olaf and Saebi, Mandana and Nan, Bozhao and Herr, John E and Wahlers, Jessica and Guo, Zhichun and Zuranski, Andrzej and Kogej, Thierry and Norrby, Per-Ola and Doyle, Abigail G and Chawla, Nitesh V.},
+  journal = {Chem. Sci.},
+  pages   = {-},
+  title   = {On the Use of Real-World Datasets for Reaction Yield Prediction},
+  year    = {2023}
+}
+
+@article{Jablonka2022OpenChemistry,
+  author  = {Jablonka, Kevin Maik and Patiny, Luc and Smit, Berend},
+  journal = {Nature Chemistry},
+  number  = {4},
+  pages   = {365--376},
+  title   = {Making the collective knowledge of chemistry open and machine actionable},
+  volume  = {14},
+  year    = {2022}
+}
+
+@article{Schwaller2021YieldPrediction,
+  author  = {Philippe Schwaller and Alain C Vaucher and Teodoro Laino and Jean-Louis Reymond},
+  journal = {Machine Learning: Science and Technology},
+  month   = {mar},
+  number  = {1},
+  pages   = {015016},
+  title   = {Prediction of chemical reaction yields using deep learning},
+  volume  = {2},
+  year    = {2021}
+}
+
+@article{Probst2022ReactionClassification,
+  author  = {Probst, Daniel and Schwaller, Philippe and Reymond, Jean-Louis},
+  journal = {Digital Discovery},
+  pages   = {91-97},
+  title   = {Reaction classification and yield prediction using the differential reaction fingerprint DRFP},
+  volume  = {1},
+  year    = {2022}
+}
+
+@article{Shields2021BayesOptReaction,
+  author  = {Shields, Benjamin J. and Stevens, Jason and Li, Jun and Parasram, Marvin and Damani, Farhan and Alvarado, Jesus I. Martinez and Janey, Jacob M. and Adams, Ryan P. and Doyle, Abigail G.},
+  journal = {Nature},
+  number  = {7844},
+  pages   = {89--96},
+  title   = {Bayesian reaction optimization as a tool for chemical synthesis},
+  volume  = {590},
+  year    = {2021}
+}
+@misc{Chowdhery2022Palm,
+  doi       = {10.48550/ARXIV.2204.02311},
+  url       = {https://arxiv.org/abs/2204.02311},
+  author    = {Chowdhery, Aakanksha and Narang, Sharan and Devlin, Jacob and Bosma, Maarten and Mishra, Gaurav and Roberts, Adam and Barham, Paul and Chung, Hyung Won and Sutton, Charles and Gehrmann, Sebastian and Schuh, Parker and Shi, Kensen and Tsvyashchenko, Sasha and Maynez, Joshua and Rao, Abhishek and Barnes, Parker and Tay, Yi and Shazeer, Noam and Prabhakaran, Vinodkumar and Reif, Emily and Du, Nan and Hutchinson, Ben and Pope, Reiner and Bradbury, James and Austin, Jacob and Isard, Michael and Gur-Ari, Guy and Yin, Pengcheng and Duke, Toju and Levskaya, Anselm and Ghemawat, Sanjay and Dev, Sunipa and Michalewski, Henryk and Garcia, Xavier and Misra, Vedant and Robinson, Kevin and Fedus, Liam and Zhou, Denny and Ippolito, Daphne and Luan, David and Lim, Hyeontaek and Zoph, Barret and Spiridonov, Alexander and Sepassi, Ryan and Dohan, David and Agrawal, Shivani and Omernick, Mark and Dai, Andrew M. and Pillai, Thanumalayan Sankaranarayana and Pellat, Marie and Lewkowycz, Aitor and Moreira, Erica and Child, Rewon and Polozov, Oleksandr and Lee, Katherine and Zhou, Zongwei and Wang, Xuezhi and Saeta, Brennan and Diaz, Mark and Firat, Orhan and Catasta, Michele and Wei, Jason and Meier-Hellstern, Kathy and Eck, Douglas and Dean, Jeff and Petrov, Slav and Fiedel, Noah},
+  keywords  = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {PaLM: Scaling Language Modeling with Pathways},
+  publisher = {arXiv},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@misc{Touvron2023Llama,
+  doi       = {10.48550/ARXIV.2302.13971},
+  url       = {https://arxiv.org/abs/2302.13971},
+  author    = {Touvron, Hugo and Lavril, Thibaut and Izacard, Gautier and Martinet, Xavier and Lachaux, Marie-Anne and Lacroix, Timothée and Rozière, Baptiste and Goyal, Naman and Hambro, Eric and Azhar, Faisal and Rodriguez, Aurelien and Joulin, Armand and Grave, Edouard and Lample, Guillaume},
+  keywords  = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {LLaMA: Open and Efficient Foundation Language Models},
+  publisher = {arXiv},
+  year      = {2023},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{Dittrich2006microfluidics,
+  author  = {Dittrich, Petra S. and Manz, Andreas},
+  journal = {Nature Reviews Drug Discovery},
+  number  = {3},
+  pages   = {210--218},
+  title   = {Lab-on-a-chip: microfluidics in drug discovery},
+  volume  = {5},
+  year    = {2006}
+}
+
+@article{Skardal2016chip,
+  author  = {Skardal, Aleksander and Shupe, Thomas and Atala, Anthony},
+  journal = {Drug Discovery Today},
+  number  = {9},
+  pages   = {1399--1411},
+  title   = {Organoid-on-a-chip and body-on-a-chip systems for drug screening and disease modeling},
+  volume  = {21},
+  year    = {2016}
+}
+
+@article{Watson2022RfDiffusion,
+  author  = {Watson, Joseph L. and Juergens, David and Bennett, Nathaniel R. and Trippe, Brian L. and Yim, Jason and Eisenach, Helen E. and Ahern, Woody and Borst, Andrew J. and Ragotte, Robert J. and Milles, Lukas F. and Wicky, Basile I. M. and Hanikel, Nikita and Pellock, Samuel J. and Courbet, Alexis and Sheffler, William and Wang, Jue and Venkatesh, Preetham and Sappington, Isaac and Torres, Susana V{\'a}zquez and Lauko, Anna and De Bortoli, Valentin and Mathieu, Emile and Barzilay, Regina and Jaakkola, Tommi S. and DiMaio, Frank and Baek, Minkyung and Baker, David},
+  journal = {bioRxiv},
+  title   = {Broadly applicable and accurate protein design by integrating structure prediction networks and diffusion generative models},
+  year    = {2022}
+}
+
+@article{Blundell2002HighThroughputCrystallography,
+  author  = {Blundell, Tom L. and Jhoti, Harren and Abell, Chris},
+  journal = {Nature Reviews Drug Discovery},
+  number  = {1},
+  pages   = {45--54},
+  title   = {High-throughput crystallography for lead discovery in drug design},
+  volume  = {1},
+  year    = {2002}
+}
+
+@article{Yeh2023DeNovoLuciferase,
+  author  = {Yeh, Andy Hsien-Wei and Norn, Christoffer and Kipnis, Yakov and Tischer, Doug and Pellock, Samuel J. and Evans, Declan and Ma, Pengchen and Lee, Gyu Rie and Zhang, Jason Z. and Anishchenko, Ivan and Coventry, Brian and Cao, Longxing and Dauparas, Justas and Halabiya, Samer and DeWitt, Michelle and Carter, Lauren and Houk, K. N. and Baker, David},
+  journal = {Nature},
+  number  = {7949},
+  pages   = {774--780},
+  title   = {De novo design of luciferases using deep learning},
+  volume  = {614},
+  year    = {2023}
+}
+
+@article{Probst2022Biocatalysis,
+  author  = {Probst, Daniel and Manica, Matteo and Nana Teukam, Yves Gaetan and Castrogiovanni, Alessandro and Paratore, Federico and Laino, Teodoro},
+  journal = {Nature Communications},
+  number  = {1},
+  pages   = {964},
+  title   = {Biocatalysed synthesis planning using data-driven learning},
+  volume  = {13},
+  year    = {2022}
+}
+
+@article{Bileschi2022ProteinAnnotation,
+  author  = {Bileschi, Maxwell L. and Belanger, David and Bryant, Drew H. and Sanderson, Theo and Carter, Brandon and Sculley, D. and Bateman, Alex and DePristo, Mark A. and Colwell, Lucy J.},
+  journal = {Nature Biotechnology},
+  number  = {6},
+  pages   = {932--937},
+  title   = {Using deep learning to annotate the protein universe},
+  volume  = {40},
+  year    = {2022}
+}
+
+@article{Schenone2013TargetID,
+  author  = {Schenone, Monica and Dan{\v c}{\'\i}k, Vlado and Wagner, Bridget K and Clemons, Paul A},
+  journal = {Nature Chemical Biology},
+  number  = {4},
+  pages   = {232--240},
+  title   = {Target identification and mechanism of action in chemical biology and drug discovery},
+  volume  = {9},
+  year    = {2013}
+}
+@article{Li2020FedLearning,
+  author  = {Li, Tian and Sahu, Anit Kumar and Talwalkar, Ameet and Smith, Virginia},
+  journal = {IEEE Signal Processing Magazine},
+  title   = {Federated Learning: Challenges, Methods, and Future Directions},
+  year    = {2020},
+  volume  = {37},
+  number  = {3},
+  pages   = {50-60},
+  doi     = {10.1109/MSP.2020.2975749}
+}
+
+@article{Popova2018DeepRL,
+  author  = {Mariya Popova and Olexandr Isayev and Alexander Tropsha},
+  journal = {Science Advances},
+  number  = {7},
+  pages   = {eaap7885},
+  title   = {Deep reinforcement learning for de novo drug design},
+  volume  = {4},
+  year    = {2018}
+}
+
+@article{Zhou2019Optimization,
+  author  = {Zhou, Zhenpeng and Kearnes, Steven and Li, Li and Zare, Richard N. and Riley, Patrick},
+  journal = {Scientific Reports},
+  number  = {1},
+  pages   = {10752},
+  title   = {Optimization of Molecules via Deep Reinforcement Learning},
+  volume  = {9},
+  year    = {2019}
+}
+
