--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -4,22 +4,20 @@
 
 TODO - finish acknowledgements
 
-First and foremost, I would like to sincerely thank my advisor Alpha Lee for his help, guidance and for the freedom I was granted throughout these years.
+First and foremost, I would like to sincerely thank my supervisor Dr Alpha A. Lee for his invaluable guidance, support, and encouragement throughout my PhD journey. I am deeply grateful for his commitment to my success and for his role in shaping my personal and professional development.
 
-In alphabetical order, I would also like to thank my colleagues who \dots: Dávid, Emma, Felix,  Janosh, Kadi, Penny, Rokas, Rhys.
+In alphabetical order, I would also like to thank my colleagues in the Lee Group: Dávid, Emma, Felix, Janosh, Kadi, Penny, Rokas, Rhys. Their knowledge, expertise, and friendship have been invaluable in shaping my research and personal growth. I feel very fortunate to have had the opportunity to work with and learn from you all, and I will always cherish the memories and lessons learned from our time together.
 
-David, Michelle, Brian. Gates scholars. CUHKPGSA?
+I was generously funded by the Gates Cambridge Scholarship to undertake this research, and I am very grateful for their support, as well as for the many friendships I have made in the Gates scholar community. I would like to give special thanks in particular to David and Michelle, for their friendship and support.
 
-I would finally like to warmly thank my dear housemates Dávid and Eszti for their help in moments of doubt.
+Friends from Cambridge. Brian.
 
-WM acknowledges the support of the Gates Cambridge Trust.
+Upheaval in my birthplace, Hong Kong. CUHKPGSA
 
-\begin{itemize}
-    \item Alpha
-    \item Collaborators
-    \item DeepMind?
-    \item Cambridge friends
-    \item Family
-\end{itemize}
+Much of the research in this thesis was conducted during the COVID-19 pandemic, when I spent a considerable amount of time indoors with my dear housemates Dávid and Eszti. I will be forever grateful for their unwavering friendship, humor, and kindness during some of the most challenging times of my PhD journey.
+
+I would like to thank Marika for always putting a smile on my face and reminding me what is truly important in life.
+
+Lastly, I would like to thank my parents, John and Maureen, for their unconditional love and continual support.
 
 \end{acknowledgements}
