--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -4,15 +4,13 @@
 
 TODO - finish acknowledgements
 
-First and foremost, I would like to sincerely thank my supervisor Dr Alpha A. Lee for his invaluable guidance, support, and encouragement throughout my PhD journey. I am deeply grateful for his commitment to my success and for his role in shaping my personal and professional development.
+First and foremost, I would like to sincerely thank my supervisor Dr Alpha A. Lee for his invaluable guidance, support, and encouragement throughout my PhD. I am deeply grateful for his commitment to my success and for his role in shaping my personal and professional development.
 
 In alphabetical order, I would also like to thank my colleagues in the Lee Group: Dávid, Emma, Felix, Janosh, Kadi, Penny, Rokas, Rhys. Their knowledge, expertise, and friendship have been invaluable in shaping my research and personal growth. I feel very fortunate to have had the opportunity to work with and learn from you all, and I will always cherish the memories and lessons learned from our time together.
 
 I was generously funded by the Gates Cambridge Scholarship to undertake this research, and I am very grateful for their support, as well as for the many friendships I have made in the Gates scholar community. I would like to give special thanks in particular to David and Michelle, for their friendship and support.
 
-Friends from Cambridge. Brian.
-
-Upheaval in my birthplace, Hong Kong. CUHKPGSA
+During my PhD there was great upheaval in my birthplace, Hong Kong. I am thankful for the camaraderie and solidarity from my fellow Cambridge postgraduate students from Hong Kong, as well as friends with links to Hong Kong, who have helped me to navigate this difficult time.
 
 Much of the research in this thesis was conducted during the COVID-19 pandemic, when I spent a considerable amount of time indoors with my dear housemates Dávid and Eszti. I will be forever grateful for their unwavering friendship, humor, and kindness during some of the most challenging times of my PhD journey.
 
