--- a/References/references.bib
+++ b/References/references.bib
@@ -3466,6 +3466,13 @@
   year    = {2020}
 }
 
+@book{corey1991logic,
+  title     = {The logic of chemical synthesis},
+  author    = {Corey, Elias James},
+  year      = {1991},
+  publisher = {Wiley}
+}
+
 @misc{roccurve,
   author  = {Wikimedia Commons},
   title   = {Receiver Operating Characteristic (ROC) curve},
@@ -3473,6 +3480,14 @@
   urlseen = {07-03-23},
   url     = {https://commons.wikimedia.org/wiki/File:Roc_curve.svg},
   note    = {\url{https://commons.wikimedia.org/wiki/File:Roc_curve.svg}}
+}
+
+@misc{NobelCorey,
+  author  = {The Nobel Foundation},
+  title   = {The Nobel Prize in Chemistry 1990},
+  year    = {190},
+  urlseen = {21-03-23},
+  url     = {\url{https://www.nobelprize.org/prizes/chemistry/1990/summary/}}
 }
 
 @article{Saar2023pnas,
@@ -3945,3 +3960,24 @@
   year    = {2019}
 }
 
+@article{hansch1962correlation,
+  title     = {Correlation of biological activity of phenoxyacetic acids with Hammett substituent constants and partition coefficients},
+  author    = {Hansch, Corwin and Maloney, Peyton P and Fujita, Toshio and Muir, Robert M},
+  journal   = {Nature},
+  volume    = {194},
+  number    = {4824},
+  pages     = {178--180},
+  year      = {1962},
+  publisher = {Nature Publishing Group UK London}
+}
+
+@article{hansch1964p,
+  title     = {p-$\sigma$-$\pi$ Analysis. A Method for the Correlation of Biological Activity and Chemical Structure},
+  author    = {Hansch, Corwin and Fujita, Toshio},
+  journal   = {Journal of the American Chemical Society},
+  volume    = {86},
+  number    = {8},
+  pages     = {1616--1626},
+  year      = {1964},
+  publisher = {ACS Publications}
+}
