--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -10,6 +10,8 @@ In alphabetical order, I would also like to thank my colleagues in the Lee Group
 
 I was generously funded by the Gates Cambridge Scholarship to undertake this research, and I am very grateful for their support, as well as for the many friendships I have made in the Gates scholar community. I would like to give special thanks in particular to David and Michelle, for their friendship and support.
 
+People from DeepMind?
+
 During my PhD there was great upheaval in my birthplace, Hong Kong. I am thankful for the camaraderie and solidarity from my fellow Cambridge postgraduate students from Hong Kong, as well as friends with links to Hong Kong, who have helped me to navigate this difficult time.
 
 Much of the research in this thesis was conducted during the COVID-19 pandemic, when I spent a considerable amount of time indoors with my dear housemates Dávid and Eszti. I will be forever grateful for their unwavering friendship, humor, and kindness during some of the most challenging times of my PhD journey.
