--- a/References/references.bib
+++ b/References/references.bib
@@ -3981,3 +3981,114 @@
   year      = {1964},
   publisher = {ACS Publications}
 }
+
+@article{Dunas2023MassSpec,
+  author  = {Due{\~n}as, Maria Emilia and Peltier-Heap, Rachel E and Leveridge, Melanie and Annan, Roland S and B{\"u}ttner, Frank H and Trost, Matthias},
+  journal = {EMBO Molecular Medicine},
+  number  = {1},
+  pages   = {e14850},
+  title   = {Advances in high-throughput mass spectrometry in drug discovery},
+  volume  = {15},
+  year    = {2023}
+}
+
+@article{Chandrasekaran2021Phenotype,
+  author  = {Chandrasekaran, Srinivas Niranj and Ceulemans, Hugo and Boyd, Justin D. and Carpenter, Anne E.},
+  journal = {Nature Reviews Drug Discovery},
+  number  = {2},
+  pages   = {145--159},
+  title   = {Image-based profiling for drug discovery: due for a machine-learning upgrade?},
+  volume  = {20},
+  year    = {2021}
+}
+
+@article{Rossler2023PeptideLibrary,
+  author  = {Simon L. R{\"o}ssler and Nathalie M. Grob and Stephen L. Buchwald and Bradley L. Pentelute},
+  journal = {Science},
+  number  = {6635},
+  pages   = {939-945},
+  title   = {Abiotic peptides as carriers of information for the encoding of small-molecule library synthesis},
+  volume  = {379},
+  year    = {2023}
+}
+
+@article{Brown1868,
+  title     = {V.—On the Connection between Chemical Constitution and Physiological Action. Part. I.—On the Physiological Action of the Salts of the Ammonium Bases, derived from Strychnia, Brucia, Thebaia, Codeia, Morphia, and Nicotia},
+  volume    = {25},
+  doi       = {10.1017/S0080456800028155},
+  number    = {1},
+  journal   = {Earth and Environmental Science Transactions of The Royal Society of Edinburgh},
+  publisher = {Royal Society of Edinburgh Scotland Foundation},
+  author    = {Brown, A. Crum and Fraser, Thomas R.},
+  year      = {1868},
+  pages     = {151-203}
+}
+
+@article{Lindsay1993Dendral,
+  author  = {Robert K. Lindsay and Bruce G. Buchanan and Edward A. Feigenbaum and Joshua Lederberg},
+  journal = {Artificial Intelligence},
+  number  = {2},
+  pages   = {209-261},
+  title   = {DENDRAL: A case study of the first expert system for scientific hypothesis formation},
+  volume  = {61},
+  year    = {1993}
+}
+
+@inbook{Yu2017CADDMethods,
+  address   = {New York, NY},
+  author    = {Yu, Wenbo and MacKerell, Alexander D.},
+  editor    = {Sass, Peter},
+  pages     = {85--106},
+  publisher = {Springer New York},
+  title     = {Computer-Aided Drug Design Methods},
+  year      = {2017}
+}
+
+@article{Ma2015MerckMolecularActivity,
+  author  = {Ma, Junshui and Sheridan, Robert P. and Liaw, Andy and Dahl, George E. and Svetnik, Vladimir},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {2},
+  pages   = {263-274},
+  title   = {Deep Neural Nets as a Method for Quantitative Structure--Activity Relationships},
+  volume  = {55},
+  year    = {2015}
+}
+
+@article{Renz2019FailureModes,
+  author  = {Philipp Renz and Dries {Van Rompaey} and J{\"o}rg Kurt Wegner and Sepp Hochreiter and G{\"u}nter Klambauer},
+  journal = {Drug Discovery Today: Technologies},
+  pages   = {55-63},
+  title   = {On failure modes in molecule generation and optimization},
+  volume  = {32-33},
+  year    = {2019}
+}
+
+
+@article{Meyers2021DeNovo,
+  author  = {Joshua Meyers and Benedek Fabian and Nathan Brown},
+  journal = {Drug Discovery Today},
+  number  = {11},
+  pages   = {2707-2715},
+  title   = {De novo molecular design and generative models},
+  volume  = {26},
+  year    = {2021}
+}
+
+@article{Walters2020Generative,
+  author  = {Walters, W. Patrick and Murcko, Mark},
+  journal = {Nature Biotechnology},
+  number  = {2},
+  pages   = {143--145},
+  title   = {Assessing the impact of generative AI on medicinal chemistry},
+  volume  = {38},
+  year    = {2020}
+}
+
+@misc{paszke2019pytorch,
+  title         = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+  author        = {Adam Paszke and Sam Gross and Francisco Massa and Adam Lerer and James Bradbury and Gregory Chanan and Trevor Killeen and Zeming Lin and Natalia Gimelshein and Luca Antiga and Alban Desmaison and Andreas Köpf and Edward Yang and Zach DeVito and Martin Raison and Alykhan Tejani and Sasank Chilamkurthy and Benoit Steiner and Lu Fang and Junjie Bai and Soumith Chintala},
+  year          = {2019},
+  eprint        = {1912.01703},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
