--- a/References/references.bib
+++ b/References/references.bib
@@ -1,5 +1,3 @@
-%TODO - check duplicate entries
-
 @article{Schwaller2019MolecularPrediction,
   title   = {{Molecular Transformer - A Model for Uncertainty-Calibrated Chemical Reaction Prediction}},
   year    = {2019},
@@ -1430,7 +1428,7 @@
 
 @misc{ChemSpace,
   author  = {Chemspace},
-  url     = {https://chem-space.com/compounds/lead-like-compounds},
+  url     = {\url{https://chem-space.com/compounds/lead-like-compounds}},
   title   = {Lead-Like compounds},
   urlseen = {10-05-22},
   year    = {2023}
