--- a/Appendix/Appendix1/appendix1.tex
+++ b/Appendix/Appendix1/appendix1.tex
@@ -8,16 +8,26 @@ All molecules synthesised by the COVID Moonshot Consortium were docked against s
 
 \section{Machine learning} \label{appendix:machine_learning}
 \subsection{FRESCO} \label{appendix:fresco}
-All data and code used for this work can be found in the GitHub repo \url{https://github.com/wjm41/frag-pcore-screen}. Supplementary figures and tables can be found in an accompanying file.
+All data and code used for this work can be found in the GitHub repo \url{https://github.com/wjm41/frag-pcore-screen}.
 
 \subsection{Ranking model} \label{appendix:ranking}
-Our training set, de novo design method and generated molecules are available on \url{https://github.com/wjm41/mpro-rank-gen}.
+
+The MLP model for ranking compounds was implemented using the FastAI Tabular framework \cite{howard2018fastai}. We found that the default hyperparameters often resulted in overfitting, so we use a smaller network with non-negligible dropout for additional regularization. Two layers of size 10 and 5 were used, with a dropout of 0.3 applied to both layers. The network was trained for 5 epochs with the Adam optimizer \cite{Kingma2014Adam} and the 1cycle cyclical learning rate scheduler \cite{smith2018superconvergence}.
+
+The reaction routes were generated using \href{https://app.postera.ai}{Manifold} \cite{PosteraManifold}, an ML-based synthesis tool and search engine.
+
+Our model training sets, screening library, and code implementation are available at \url{https://github.com/wjm41/mpro-rank-gen}. \cite{howard2018fastai}
 
 \subsection{Transformer model} \label{appendix:transformer}
-The Molecular Transformer architecture used throughout this work is based on the model described in Schwaller et. al. \cite{Schwaller2019MolecularPrediction}. 
+The Molecular Transformer architecture used is based on the model described in Schwaller et. al. \cite{Schwaller2019MolecularPrediction}.
 
 The model uses a 256 dimensional learnt embedding for each SMILES token. The encoder and the decoder are both made up of 4 standard transformer layers and dropout is applied with probability 0.1 \cite{Srivastava2014dropout}. For weight optimization the Adam optimizer is used and the model is trained for 500 000 steps. Checkpoints are saved every 10 000 steps and the final model is obtained by averaging the weights of the last 20 checkpoints for USPTO.
 
-The model was implemented with OpenNMT-py package \cite{Klein2017} which makes use of the PyTorch framework \cite{paszke2019pytorch}. 
+The model was implemented with OpenNMT-py package \cite{Klein2017} which makes use of the PyTorch framework \cite{paszke2019pytorch}.
 
-All code used for implementing the attribution tools for the Molecular Transformer, generating the artificial Friedel-Crafts dataset, and Tanimoto-splitting USPTO can be accessed in the GitHub repo \href{https://github.com/davkovacs/MTExplainer.git}{MTExplainer} \cite{Kovacs2020MolecularExplainer}. The USPTO dataset used to train the model \cite{Lowe2012, Jin2017}, as well as the Tanimoto similarity-based train/test splits of USPTO can also be found in the GitHub repo.
+All code used for implementing the attribution tools for the Molecular Transformer, generating the artificial Friedel-Crafts dataset, and Tanimoto-splitting USPTO can be accessed at \url{https://github.com/davkovacs/MTExplainer}. The USPTO dataset used to train the model \cite{Lowe2012, Jin2017}, as well as the Tanimoto similarity-based train/test splits of USPTO can also be found in the GitHub repo.
+
+\subsection{Crude bioactivity ML model} \label{appendix:crude}
+The RF model was implemented with default hyperparameters in scikit-learn \cite{scikit-learn}. The code for implementing the RF model, as well as the bioactivity data, screening library and chosen molecules are available on \url{https://gitlab.com/wjm41/noisyamides}.
+
+The GP model was also implemented in scikit-learn \cite{scikit-learn} with default length scale hyperparameters of 1.0 for the radial basis function as well as Matern kernels. The code for implementing the GP model can be found at \url{https://github.com/emmaking-smith/Moonshot}.
