--- a/References/references.bib
+++ b/References/references.bib
@@ -746,6 +746,12 @@
   howpublished = {\url{https://www.reaxys.com/}}
 }
 
+@misc{PosteraManifold,
+  title        = {{Manifold}},
+  author       = {{PostEra}},
+  howpublished = {\url{https://app.postera.ai}}
+}
+
 
 @article{bradley2003cdk2,
   author  = {Bradley, Erin K. and Miller, Jennifer L. and Saiah, Eddine and Grootenhuis, Peter D. J.},
@@ -777,6 +783,39 @@
   urlseen      = {07-03-23},
   year         = {2023}
 } 
+
+@article{scipy,
+  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
+             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
+             Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
+             Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
+             Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
+             Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
+             Kern, Robert and Larson, Eric and Carey, C J and
+             Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
+             {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
+             Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
+             Harris, Charles R. and Archibald, Anne M. and
+             Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
+             {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
+             Computing in Python}},
+  journal = {Nature Methods},
+  year    = {2020},
+  volume  = {17},
+  pages   = {261--272},
+  adsurl  = {https://rdcu.be/b08Wh},
+  doi     = {10.1038/s41592-019-0686-2}
+}
+
+@misc{smith2018superconvergence,
+  title         = {Super-Convergence: Very Fast Training of Neural Networks Using Large Learning Rates},
+  author        = {Leslie N. Smith and Nicholay Topin},
+  year          = {2018},
+  eprint        = {1708.07120},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
 
 @misc{soapxx,
   author       = {Poelking, Carl},
