transformer blurb edited

--- a/References/references.bib
+++ b/References/references.bib
@@ -4129,3 +4129,32 @@
   archiveprefix = {arXiv},
   primaryclass  = {cs.LG}
 }
+
+@article{Struble2020synthesis,
+  author  = {Struble, Thomas J. and Alvarez, Juan C. and Brown, Scott P. and Chytil, Milan and Cisar, Justin and DesJarlais, Renee L. and Engkvist, Ola and Frank, Scott A. and Greve, Daniel R. and Griffin, Daniel J. and Hou, Xinjun and Johannes, Jeffrey W. and Kreatsoulas, Constantine and Lahue, Brian and Mathea, Miriam and Mogk, Georg and Nicolaou, Christos A. and Palmer, Andrew D. and Price, Daniel J. and Robinson, Richard I. and Salentin, Sebastian and Xing, Li and Jaakkola, Tommi and Green, William. H. and Barzilay, Regina and Coley, Connor W. and Jensen, Klavs F.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {16},
+  pages   = {8667-8682},
+  title   = {Current and Future Roles of Artificial Intelligence in Medicinal Chemistry Synthesis},
+  volume  = {63},
+  year    = {2020}
+}
+
+@article{Topliss1977scheme,
+  author  = {Topliss, John G.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {4},
+  pages   = {463-469},
+  title   = {A manual method for applying the Hansch approach to drug design},
+  volume  = {20},
+  year    = {1977}
+}
+
+@article{Schwaller2018token,
+  author  = {Schwaller, Philippe and Gaudin, Th{\'e}ophile and L{\'a}nyi, D{\'a}vid and Bekas, Costas and Laino, Teodoro},
+  journal = {Chem. Sci.},
+  pages   = {6091-6098},
+  title   = {``Found in Translation'': predicting outcomes of complex organic chemistry reactions using neural sequence-to-sequence models},
+  volume  = {9},
+  year    = {2018}
+}
