--- a/References/references.bib
+++ b/References/references.bib
@@ -4158,3 +4158,57 @@
   volume  = {9},
   year    = {2018}
 }
+
+@misc{dufter2021position,
+  title         = {Position Information in Transformers: An Overview},
+  author        = {Philipp Dufter and Martin Schmitt and Hinrich Schütze},
+  year          = {2021},
+  eprint        = {2102.11090},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
+@misc{choromanski2022rethinking,
+  title         = {Rethinking Attention with Performers},
+  author        = {Krzysztof Choromanski and Valerii Likhosherstov and David Dohan and Xingyou Song and Andreea Gane and Tamas Sarlos and Peter Hawkins and Jared Davis and Afroz Mohiuddin and Lukasz Kaiser and David Belanger and Lucy Colwell and Adrian Weller},
+  year          = {2022},
+  eprint        = {2009.14794},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@misc{child2019generating,
+  title         = {Generating Long Sequences with Sparse Transformers},
+  author        = {Rewon Child and Scott Gray and Alec Radford and Ilya Sutskever},
+  year          = {2019},
+  eprint        = {1904.10509},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@misc{kaplan2020scaling,
+  title         = {Scaling Laws for Neural Language Models},
+  author        = {Jared Kaplan and Sam McCandlish and Tom Henighan and Tom B. Brown and Benjamin Chess and Rewon Child and Scott Gray and Alec Radford and Jeffrey Wu and Dario Amodei},
+  year          = {2020},
+  eprint        = {2001.08361},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@misc{chithrananda2020chemberta,
+  title         = {ChemBERTa: Large-Scale Self-Supervised Pretraining for Molecular Property Prediction},
+  author        = {Seyone Chithrananda and Gabriel Grand and Bharath Ramsundar},
+  year          = {2020},
+  eprint        = {2010.09885},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@article{Schwaller2021rxnmapper,
+	author = {Philippe Schwaller and Benjamin Hoover and Jean-Louis Reymond and Hendrik Strobelt and Teodoro Laino},
+	journal = {Science Advances},
+	number = {15},
+	pages = {eabe4166},
+	title = {Extraction of organic chemistry grammar from unsupervised learning of chemical reactions},
+	volume = {7},
+	year = {2021}}
