--- a/Preamble/preamble.tex
+++ b/Preamble/preamble.tex
@@ -77,6 +77,7 @@
 % ********************************** Tables ************************************
 \usepackage{booktabs} % For professional looking tables
 \usepackage{multirow}
+\usepackage{bm}
 
 %\usepackage{multicol}
 %\usepackage{longtable}
