--- a/References/references.bib
+++ b/References/references.bib
@@ -843,6 +843,36 @@
   issn    = {0010-4655}
 }
 
+
+@article{zhang2020covid,
+  author  = {Linlin Zhang and Daizong Lin and Xinyuanyuan Sun and Ute Curth and Christian Drosten and Lucie Sauerhering and Stephan Becker and Katharina Rox and Rolf Hilgenfeld},
+  journal = {Science},
+  number  = {6489},
+  pages   = {409-412},
+  title   = {Crystal structure of SARS-CoV-2 main protease provides a basis for design of improved $\alpha$-ketoamide inhibitors},
+  volume  = {368},
+  year    = {2020}
+}
+
+@article{Mukae2022Ensitrelvirphase2a,
+  author  = {Hiroshi Mukae and Hiroshi Yotsuyanagi and Norio Ohmagari and Yohei Doi and Takumi Imamura and Takuhiro Sonoyama and Takahiro Fukuhara and Genki Ichihashi and Takao Sanaki and Keiko Baba and Yosuke Takeda and Yuko Tsuge and Takeki Uehara},
+  journal = {Antimicrobial Agents and Chemotherapy},
+  number  = {10},
+  pages   = {e00697-22},
+  title   = {A Randomized Phase 2/3 Study of Ensitrelvir, a Novel Oral SARS-CoV-2 3C-Like Protease Inhibitor, in Japanese Patients with Mild-to-Moderate COVID-19 or Asymptomatic SARS-CoV-2 Infection: Results of the Phase 2a Part},
+  volume  = {66},
+  year    = {2022}
+}
+
+@article{Mukae2022Ensitrelvirphase2b,
+  author  = {Mukae, Hiroshi and Yotsuyanagi, Hiroshi and Ohmagari, Norio and Doi, Yohei and Sakaguchi, Hiroki and Sonoyama, Takuhiro and Ichihashi, Genki and Sanaki, Takao and Baba, Keiko and Tsuge, Yuko and Uehara, Takeki},
+  journal = {Clinical Infectious Diseases},
+  month   = {12},
+  title   = {{Efficacy and Safety of Ensitrelvir in Patients With Mild-to-Moderate Coronavirus Disease 2019 (COVID-19): The Phase 2b Part of a Randomized, Placebo-Controlled, Phase 2/3 Study}},
+  year    = {2022}
+}
+
+
 @article{zhang2019bayessemisup,
   archiveprefix = {arXiv},
   arxivid       = {1902.00925},
@@ -3519,6 +3549,24 @@
   note    = {\url{https://commons.wikimedia.org/wiki/File:Roc_curve.svg}}
 }
 
+@misc{who_dashboard,
+  author  = {World Health Organization},
+  title   = {Coronavirus (COVID-19) Dashboard},
+  year    = {2023},
+  urlseen = {14-04-23},
+  url     = {https://covid19.who.int},
+  note    = {\url{https://covid19.who.int}}
+}
+
+@misc{diamond_xchem,
+  author  = {Diamond Light Source},
+  title   = {Main protease structure and XChem fragment screen},
+  year    = {2020},
+  urlseen = {05-05-20},
+  url     = {https://www.diamond.ac.uk/covid-19/for-scientists/Main-protease-structure-and-XChem.html},
+  note    = {\url{https://www.diamond.ac.uk/covid-19/for-scientists/Main-protease-structure-and-XChem.html}}
+}
+
 @misc{NobelCorey,
   author  = {The Nobel Foundation},
   title   = {The Nobel Prize in Chemistry 1990},
@@ -4212,3 +4260,14 @@
 	title = {Extraction of organic chemistry grammar from unsupervised learning of chemical reactions},
 	volume = {7},
 	year = {2021}}
+
+@article{hilgenfeld2014sars,
+  title     = {From SARS to MERS: crystallographic studies on coronaviral proteases enable antiviral drug design},
+  author    = {Hilgenfeld, Rolf},
+  journal   = {The FEBS journal},
+  volume    = {281},
+  number    = {18},
+  pages     = {4085--4096},
+  year      = {2014},
+  publisher = {Wiley Online Library}
+}
