--- a/thesis.tex
+++ b/thesis.tex
@@ -104,7 +104,8 @@
 
 \ifdefineChapter
 	% \includeonly{Chapters/Preface/preface}
-	\includeonly{Chapters/Intro/intro}
+	% \includeonly{Chapters/Intro/intro}
+	% \includeonly{Chapters/Moonshot/moonshot}
 	% \includeonly{Chapters/Background/background}
 	% \includeonly{Chapters/Fresco/fresco}
 	% \includeonly{Chapters/Ranking/ranking}
@@ -144,6 +145,7 @@
 \include{Chapters/Preface/preface}
 \include{Chapters/Intro/intro}
 \include{Chapters/Background/background}
+% \include{Chapters/Moonshot/moonshot}
 \include{Chapters/Fresco/fresco}
 \include{Chapters/Ranking/ranking}
 \include{Chapters/Transformer/transformer}
